--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
            <li class="nav-item active">
            <% } %>
 
-             <a class="nav-link" href="/"><i class="fa fa-lg fa-home"></i> Home <span class="sr-only">(current)</span></a>
+             <a class="nav-link" href="/"><i class="fa fa-home"></i></i> Home <span class="sr-only">(current)</span></a>
 
            </li>
            <% if(title == "About") {%>
@@ -37,7 +37,7 @@
            <% } else {%>
            <li class="nav-item active">
            <% } %>
-             <a class="nav-link" href="/about"><i class="fa fa-lg fa-info"></i> About</a>
+             <a class="nav-link" href="/about"><i class="fa fa-info-circle"></i></i> About</a>
            </li>
 
 
@@ -46,16 +46,16 @@
            <% } else {%>
            <li class="nav-item active">
            <% } %>
-               <a class="nav-link" href="/products"><i class="fa fa-lg fa-briefcase"></i> Products</a>
+               <a class="nav-link" href="/products"><i class="fa fa-suitcase"></i> Products</a>
              </li>
 
 
-             <% if(title == "Services") {%>
+            <% if(title == "Services") {%>
            <li class="nav-item active">
            <% } else {%>
            <li class="nav-item active">
            <% } %>
-               <a class="nav-link" href="/services"><i class="fa fa-lg fa-birthday-cake"></i> Services</a>
+               <a class="nav-link" href="/services"><i class="fa fa-search"></i> Services</a>
              </li>
 
              <% if(title == "Contact") {%>
@@ -63,7 +63,7 @@
            <% } else {%>
            <li class="nav-item active">
            <% } %>
-               <a class="nav-link" href="/contact"><i class="fa fa-lg fa-phone"></i> Contact</a>
+               <a class="nav-link" href="/contact"><i class="fa fa-phone-square"></i> Contact</a>
              </li>
          </ul>
        </div>
